[tool.poetry]
name = "wsmb"
version = "0.1.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
websockets = "^13.0.1"
pydantic = "^2.9.2"
pyvalidate = {git = "https://github.com/CrinitusFeles/PyValidate"}
event = {git = "https://github.com/CrinitusFeles/Event"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
