[project]
name = "wsmb"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
    "event",
    "pyvalidate",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "websockets>=15.0.1",
]

[tool.uv.sources]
pyvalidate = { git = "https://github.com/CrinitusFeles/PyValidate" }
event = { git = "https://github.com/CrinitusFeles/Event.git" }
